# cmakeTesting

./: CMakeLists.txt  Jenkinsfile  README.md  post.sh  pre.sh
includes/: common.hpp
src/main/: extra.cpp  main.cpp
